k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-cx
  namespace: cx-team
spec:
  selector:
    matchLabels:
      app: api-cx
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: api-cx
    spec:
      containers:
        - name: api-cx
          image: 86624399/api-cx:1.0.0
          ports:
            - containerPort: 3500
              protocol: TCP
          resources:
            limits:
              memory: 100Mi
            requests:
              memory: 50Mi
      imagePullSecrets:
        - name: registry-secret
