k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-cx
  namespace: cx-team
spec:
  type: NodePort
  selector:
    app: api-cx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3500
