k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api-cx
  namespace: cx-team  
spec:
  rules:
  - host: "api-cx.dito.com.br"
    http:
      paths:
        - path: /
          backend:
            serviceName: api-cx
            servicePort: 80
